FlightDetailsTable: Use `router` service to navigate

--- a/ember/app/components/flight-page.hbs
+++ b/ember/app/components/flight-page.hbs
@@ -12,7 +12,7 @@
     </sidebar.Tabs>
 
     <sidebar.Panel @id="overview" @title={{t "overview"}}>
-      <FlightDetailsTable @flight={{flight}} @transitionTo={{transitionTo}} />
+      <FlightDetailsTable @flight={{flight}} />
     </sidebar.Panel>
 
     <sidebar.Panel @id="comments" @title={{t "comments"}}>
