NavBarSearchForm: Replace `onsubmit` to `on` modifier

--- a/ember/app/components/nav-bar-search-form.hbs
+++ b/ember/app/components/nav-bar-search-form.hbs
@@ -2,8 +2,8 @@
   action="/search"
   local-class="form"
   class="navbar-form navbar-left navbar-search visible-lg"
-  onsubmit={{action @onSearch this.searchTextService.text}}
   ...attributes
+  {{on "submit" (prevent-default (fn @onSearch this.searchTextService.text))}}
 >
   <div class="form-group">
     <Input
