controllers/application: Convert to native class

--- a/ember/app/templates/application.hbs
+++ b/ember/app/templates/application.hbs
@@ -7,6 +7,6 @@
 {{#if onFreestyleRoute}}
   {{outlet}}
 {{else}}
-  <NavBar @onSearch={{action "search"}} />
+  <NavBar @onSearch={{this.search}} />
   {{outlet}}
 {{/if}}
