docs(livetrack24): fix link to live tracking api
According to their new docs, the current referenced link is for a deprecated api

--- a/ember/app/templates/tracking/info.hbs
+++ b/ember/app/templates/tracking/info.hbs
@@ -23,7 +23,7 @@
         </li>
         <li>
           <b>{{t "tracking.lt24-clients"}}:</b><br>
-          {{t "tracking.lt24-description" htmlSafe=true livetrack24=(html-safe "<a href=\"http://www.livetrack24.com/docs/wiki/LiveTracking%20API\">LiveTrack24</a>") skylines=(html-safe "<code>skylines.aero</code>")}}
+          {{t "tracking.lt24-description" htmlSafe=true livetrack24=(html-safe "<a href=\"https://www.livetrack24.com/docs/api\">LiveTrack24</a>") skylines=(html-safe "<code>skylines.aero</code>")}}
         </li>
       </ul>
 
